<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ReportZN</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_registro">RegisterActivity</string>
    <string name="HRNombre">Name</string>
    <string name="HRCorreo">E-mail</string>
    <string name="HRClave">Password</string>
    <string name="HRCClave">Confirm Password</string>
    <string name="TRInsertar">Insert</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_detalle">DetailsActivity</string>
    <string name="LBIngresar">Log In</string>
    <string name="title_activity_following">FollowingActivity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="differentPasswords">The passwords are different</string>
    <string name="successfulInsertion">Successful insertion</string>
    <string name="title_activity_news">NewsActivity</string>
    
    <string name="title_new">Title</string>
    <string name="description_new">Description</string>
    <string name="title_left">Provide Title </string>

</resources>
