<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewsActivity" >


    <EditText 
        android:id="@+id/etHeadNews"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:hint="@string/title_new"
        />
    
    <EditText 
        android:id="@+id/etDescriptionNews"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etHeadNews"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:hint="@string/description_new"
        />
    
    <Button 
        android:id="@+id/bInsertNew"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescriptionNews"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/TRInsertar"/>
    
</RelativeLayout>
